# gameprog

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  Makefile  README.md
Chapter01/: CMakeLists.txt  game.cpp  game.h
Chapter02/: CMakeLists.txt  actor.cpp  actor.h  anim_sprite_component.cpp  anim_sprite_component.h  bg_sprite_component.cpp  bg_sprite_component.h  component.cpp  component.h  game.cpp  game.h  main.cpp  math.h  ship.cpp  ship.h  sprite_component.cpp  sprite_component.h
